@@ -423,3 +423,7 @@ Code review comments
 	- We could perhaps remove the generic from IFixedFieldSetting, but that tells us the return type of the TypeConverter field: 
 	  ITypeConverter<TProperty> TypeConverter { get; set; }
 	- One workaround is to use properties - GenericCollectionWithProperties.linq
+
+9/6/18
+	- Finished static factory for convention based type converters
+	- Added unit test for int converter. Other primitive types need unit tests next. 
